--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
       
       body {
-        background-image: url('/styles/images/background_three.jpg');
+        background-image: url('../public/styles/images/background_three.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
