--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <header class="mb-auto pt-3 pb-3">
         <div class="container">
           <div>
-            <a href="/about"><h3 class="float-md-end mb-0 title">by <span class="active">Tori Jones</span></h3></a>
+            <a href="about.html"><h3 class="float-md-end mb-0 title">by <span class="active">Tori Jones</span></h3></a>
           </div>
         </div>
       </header>
@@ -171,7 +171,7 @@
               <p class="under_tagline pt-3">It’s time for a whole new way of experiencing stories — become more than just a reader</p>
             </div>
             <p class="lead">
-                <a href="/mvp" class="pill-button btn-lg btn-light border-white bg-white" >Get Started <span class="arrow">→</span></a>
+                <a href="mvp.ejs" class="pill-button btn-lg btn-light border-white bg-white" >Get Started <span class="arrow">→</span></a>
             </p>
         </main>
 
